--- a/AlbionMarketPriceDiff/View/MarketItemView.xaml
+++ b/AlbionMarketPriceDiff/View/MarketItemView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="AlbionMarketPriceDiff.MarketItemView"
+﻿<UserControl x:Class="AlbionMarketPriceDiff.View.MarketItemView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
